/*
 * Project: Lib Utils
 * Copyright (C) 2017 alf.labs gmail com,
 *
 *  This program is free software: you can redistribute it and/or modify
 *  it under the terms of the GNU General Public License as published by
 *  the Free Software Foundation, either version 3 of the License, or
 *  (at your option) any later version.
 *
 *  This program is distributed in the hope that it will be useful,
 *  but WITHOUT ANY WARRANTY; without even the implied warranty of
 *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 *  GNU General Public License for more details.
 *
 *  You should have received a copy of the GNU General Public License
 *  along with this program.  If not, see <http://www.gnu.org/licenses/>.
 */

group "com.alflabs.libutilsjava"
version "1.3-SNAPSHOT"

// Note:
// - Android Studio generates a plugin: "java-library" line.
// - IntellJ (non Android) generates a plugin: "java" line.
apply plugin: "java"

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

repositories {
    mavenCentral()
}

sourceSets {
    main {
        java {
            exclude "java/**"
        }
    }
}

dependencies {
    implementation "com.google.guava:guava:32.0.1-jre"

    // Used by InjectionValidator
    implementation "com.google.truth:truth:1.1.3"
    def dagger_version = "2.41"
    implementation "com.google.dagger:dagger:$dagger_version"

    // Testing: Mockito and Truth
    testImplementation "org.mockito:mockito-core:5.4.0"
    testImplementation "com.google.truth:truth:1.1.5"
    testImplementation "junit:junit:4.13.2"
}
